Trying to fix Contact getting cut off in navbar

--- a/stylesheet/portfolio.css
+++ b/stylesheet/portfolio.css
@@ -587,7 +587,7 @@ input[type=text]:focus-visible {
     .Navbar {
         font-size: 2.5vw;
         font-weight: 700;
-        padding-right: 2vw;
+        /* padding-right: 2vw; */
     }
 
     .Navbar a{
@@ -595,7 +595,7 @@ input[type=text]:focus-visible {
         font-size: 2.5vw;
         font-weight: 600;
         letter-spacing: 2.75px;
-        padding-right: 2vw;
+        /* padding-right: 2vw; */
         /* text-align: left; */
     }
 
